tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_type_mismatch_int_to_bool.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:bool = true
x = 42

